[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels/tests/test3/test3.gd" type="Script" id=1]
[ext_resource path="res://entities/map/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/doors/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/computer/Computer.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/tests/test3/lightmap/lightmap.lmbake" type="BakedLightmapData" id=5]
[ext_resource path="res://entities/level/PlayerSpawner.gd" type="Script" id=6]
[ext_resource path="res://entities/slider/Slider.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/tests/test3/slides/Slide.tscn" type="PackedScene" id=8]
[ext_resource path="res://levels/tests/test3/info.tres" type="Resource" id=9]
[ext_resource path="res://entities/doors/DoorSingle.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/Rooms_map/Room.tscn" type="PackedScene" id=11]

[sub_resource type="GDScript" id=1]
script/source = "extends Door
"

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )
level_info = ExtResource( 9 )
slider = NodePath("Slider")
map = NodePath("Map")
spawner = NodePath("PlayerSpawner")

[node name="PlayerSpawner" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.949588, 0.906368, 4.73658 )
script = ExtResource( 6 )

[node name="Map" parent="." instance=ExtResource( 2 )]
data = {
"cells": PoolIntArray( 0, 0, 538312708, 2, 0, 536870912, 4, 0, 538312704, 65530, 0, 538312704, 65532, 0, 538312704, 65534, 0, 538312708, 262144, 0, 537395200, 262146, 0, 537395200, 262148, 0, 537395200, 327674, 0, 537395200, 327676, 0, 537395200, 327678, 0, 537395200, 2, 1, 536870912, 4, 1, 538312704, 5, 1, 538312713, 65529, 1, 537919497, 65530, 1, 538312704, 65532, 1, 538312704, 0, 2, 538312708, 2, 2, 536870912, 4, 2, 538312704, 65530, 2, 538312704, 65532, 2, 538312704, 65534, 2, 538312708, 262144, 2, 537395200, 262146, 2, 537395200, 262148, 2, 537395200, 327674, 2, 537395200, 327676, 2, 537395200, 327678, 2, 537395200, 2, 3, 536870912, 4, 3, 538312704, 65530, 3, 538312704, 65532, 3, 538312704, 0, 4, 538312708, 2, 4, 536870912, 4, 4, 538312704, 65530, 4, 538312704, 65532, 4, 538312704, 65534, 4, 538312708, 262144, 4, 537395200, 262146, 4, 537395200, 262148, 4, 537395200, 327674, 4, 537395200, 327676, 4, 537395200, 327678, 4, 537395200, 2, 5, 536870912, 4, 5, 538312704, 5, 5, 538312713, 65529, 5, 537919497, 65530, 5, 538312704, 65532, 5, 538312704, 0, 6, 538312708, 2, 6, 536870912, 4, 6, 538312704, 65530, 6, 538312704, 65532, 6, 538312704, 65534, 6, 538312708, 262144, 6, 537395200, 262146, 6, 537395200, 262148, 6, 537395200, 327674, 6, 537395200, 327676, 6, 537395200, 327678, 6, 537395200, 2, 7, 536870912, 4, 7, 538312704, 65530, 7, 538312704, 65532, 7, 538312704, 0, 8, 538312708, 2, 8, 536870912, 4, 8, 538312704, 65530, 8, 538312704, 65532, 8, 538312704, 65534, 8, 538312708, 262144, 8, 537395200, 262146, 8, 537395200, 262148, 8, 537395200, 327674, 8, 537395200, 327676, 8, 537395200, 327678, 8, 537395200, 2, 9, 536870912, 4, 9, 538312704, 5, 9, 538312713, 65529, 9, 537919497, 65530, 9, 538312704, 65532, 9, 538312704, 0, 10, 538312708, 2, 10, 536870912, 4, 10, 538312704, 65530, 10, 538312704, 65532, 10, 538312704, 65534, 10, 538312708, 262144, 10, 537395200, 262146, 10, 537395200, 262148, 10, 537395200, 327674, 10, 537395200, 327676, 10, 537395200, 327678, 10, 537395200, 2, 11, 536870912, 4, 11, 536870912, 65530, 11, 538312704, 65532, 11, 538312704, 0, 12, 538312704, 1, 12, 538312704, 2, 12, 538312704, 4, 12, 536870912, 65530, 12, 538312704, 65532, 12, 538312704, 65533, 12, 538312704, 65534, 12, 538312704, 65535, 12, 538312704, 262144, 12, 537395200, 262146, 12, 537395200, 262148, 12, 537395200, 327674, 12, 537395200, 327676, 12, 537395200, 327678, 12, 537395200, 0, 13, 538312704, 1, 13, 538312704, 2, 13, 538312704, 4, 13, 536870912, 5, 13, 538312713, 65529, 13, 537919497, 65530, 13, 538312704, 65532, 13, 538312704, 65533, 13, 538312704, 65534, 13, 538312704, 65535, 13, 538312704, 4, 14, 536870912, 65530, 14, 538312704, 262144, 14, 537395200, 262146, 14, 537395200, 262148, 14, 537395200, 327674, 14, 537395200, 327676, 14, 537395200, 327678, 14, 537395200, 0, 15, 538312704, 1, 15, 538312704, 2, 15, 538312704, 3, 15, 538312704, 4, 15, 538312704, 65530, 15, 538312704, 65531, 15, 538312704, 65532, 15, 538312704, 65533, 15, 538312704, 65534, 15, 538312704, 65535, 15, 538312704, 3, 16, 537526289, 5, 16, 536870943, 65529, 16, 536870943, 65531, 16, 537526289, 65535, 16, 537526306, 262146, 16, 537395200, 262148, 16, 537395200, 327674, 16, 537395200, 327676, 16, 537395200, 5, 17, 538312713, 65529, 17, 537919497, 65534, 17, 536870915, 262144, 17, 537395229, 327678, 17, 537395229, 1, 18, 538312713, 65533, 18, 537919497, 65534, 19, 536870915, 262144, 19, 537395229, 327678, 19, 537395229, 65534, 21, 536870915, 262144, 21, 537395229, 327678, 21, 537395229, 1, 22, 538312713, 65533, 22, 537919497, 65534, 23, 536870915, 262144, 23, 537395229, 327678, 23, 537395229, 65534, 25, 536870915, 262144, 25, 537395229, 327678, 25, 537395229, 1, 26, 538312713, 65533, 26, 537919497, 65534, 27, 536870915, 262144, 27, 537395228, 327678, 27, 537395229, 1, 28, 537526303, 65533, 28, 537526303, 65535, 28, 537526309, 262165, 65315, 536870930, 3, 65527, 536870926, 5, 65527, 536870943, 65529, 65527, 536870943, 65531, 65527, 536870926, 65535, 65527, 536870920, 0, 65528, 538312704, 1, 65528, 538312704, 2, 65528, 538312704, 3, 65528, 538312704, 4, 65528, 536870912, 65530, 65528, 538312704, 65531, 65528, 538312704, 65532, 65528, 538312704, 65533, 65528, 538312704, 65534, 65528, 538312704, 65535, 65528, 538312704, 262144, 65528, 537395200, 262146, 65528, 537395200, 262148, 65528, 537395200, 327674, 65528, 537395200, 327676, 65528, 537395200, 327678, 65528, 537395200, 4, 65529, 536870912, 5, 65529, 538312713, 65529, 65529, 537919497, 65530, 65529, 538312704, 0, 65530, 538312704, 1, 65530, 538312704, 2, 65530, 538312704, 4, 65530, 536870912, 65530, 65530, 538312704, 65532, 65530, 538312704, 65533, 65530, 538312704, 65534, 65530, 538312704, 65535, 65530, 538312704, 262144, 65530, 537395200, 262146, 65530, 537395200, 262148, 65530, 537395200, 327674, 65530, 537395200, 327676, 65530, 537395200, 327678, 65530, 537395200, 2, 65531, 536870912, 4, 65531, 536870912, 65530, 65531, 538312704, 65532, 65531, 538312704, 0, 65532, 538312708, 2, 65532, 536870912, 4, 65532, 538312704, 65530, 65532, 538312704, 65532, 65532, 538312704, 65534, 65532, 538312708, 262144, 65532, 537395200, 262146, 65532, 537395200, 262148, 65532, 537395200, 327674, 65532, 537395200, 327676, 65532, 537395200, 327678, 65532, 537395200, 2, 65533, 536870912, 4, 65533, 538312704, 5, 65533, 538312713, 65529, 65533, 537919497, 65530, 65533, 538312704, 65532, 65533, 538312704, 0, 65534, 538312708, 2, 65534, 536870912, 4, 65534, 538312704, 65530, 65534, 538312704, 65532, 65534, 538312704, 65534, 65534, 538312708, 262144, 65534, 537395200, 262146, 65534, 537395200, 262148, 65534, 537395200, 327674, 65534, 537395200, 327676, 65534, 537395200, 327678, 65534, 537395200, 2, 65535, 536870912, 4, 65535, 538312704, 65530, 65535, 538312704, 65532, 65535, 538312704 )
}

[node name="BakedLightmap" type="BakedLightmap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.35698, 3.99066, 13.359 )
extents = Vector3( 25.7198, 12.0534, 27.3636 )
use_hdr = false
light_data = ExtResource( 5 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.379001, 2.97569, -1.09918 )
omni_range = 23.5227

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.673296, 3.35801, 23.3264 )
omni_range = 11.2734

[node name="Door" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.484326, 0.546188, 17.291 )
code = SubResource( 1 )
display_name = "Door"
is_programmable = true
is_interactable = true
interaction_message = "open"

[node name="Computer" parent="." instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.516569, 0.484181, 0 )

[node name="Slider" parent="." instance=ExtResource( 7 )]
slide_scenes = [ ExtResource( 8 ) ]

[node name="DoorSingle" parent="." instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.515697, 0.557346, 28.3535 )
is_interactable = true

[node name="Timer" type="Timer" parent="."]

[node name="Room" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.99264, 2.38532, 16.6661 )

[connection signal="interact" from="Door" to="." method="_on_Door_interact"]
[connection signal="interact" from="DoorSingle" to="." method="_on_DoorSingle_interact"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
